<resources>
    <string name="app_name">Popular Movies</string>

    <string name="title_place_holder">Interstellar</string>

    <string name="release_date_place_holder">October 26th, 2014</string>
    
    <string name="vote_average_place_holder">8.6/10</string>

    <string name="plot_synopsis_place_holder">In Earth\'s future, a global crop blight and second Dust
        Bowl are slowly rendering the planet uninhabitable. Professor Brand (Michael Caine), a
        brilliant NASA physicist, is working on plans to save mankind by transporting Earth\'s
        population to a new home via a wormhole. But first, Brand must send former NASA pilot Cooper
        (Matthew McConaughey) and a team of researchers through the wormhole and across the galaxy
        to find out which of three planets could be mankind\'s new home.</string>
    <string name="poster_content_description">This is the poster for the selected movie</string>

    <!-- Strings for the UriBuilder -->

    <string name="tmdb_base_url" translatable="false">http://api.themoviedb.org/3/movie/</string>


    <!-- Strings for Miscellaneous -->
    <string name="release_date_string">Release Date</string>
    <string name="rating_string">Rating</string>

    <!-- Strings for the "Order by" preferences -->

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Movies Settings</string>

    <string name="settings_order_by_label">Order by</string>
    <string name="settings_order_by_key" translatable="false">orderBy</string>
    <string name="settings_order_by_default" translatable="false">popular</string>

    <string name="settings_order_by_most_popular_label_descending">Most Popular</string>
    <string name="settings_order_by_most_popular_value_descending">popular</string>

    <string name="settings_order_by_top_rated_label_descending">Top Rated</string>
    <string name="settings_order_by_top_rated_value_descending">top_rated</string>

    <string name="settings_show_favorites_label">Favorites</string>
    <string name="settings_show_favorites_value">Favorites</string>

    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_movies">No Movies Found</string>

    <string name="videos_label">Videos</string>
    <string name="reviews_label">Reviews</string>
    <string name="read_full_review">Read Full Review</string>
    <string name="reviewer_place_holder">John Smith</string>
    <string name="review_place_holder">With the likes of Anne Hathaway, Jessica Chastain, Michael Caine, Casey Affleck, Ellen Burstyn and John Lithgow as supporting players, it is redundant to say that the ensemble adds so much more to a film that boasts excellence in all departments.</string>
    <string name="video_place_holder_description">This is where the videos are.</string>

    <string name="trailer_place_holder_description">Image preview for video</string>

    <string name="release_date_label">Release Date</string>

    <string name="rating_label">Rating</string>

    <string name="synopsis_label">Synopsis</string>

    <string name="favorite_content_description">Favorite</string>

    <string name="added_favorite">Added To Favorites</string>
    <string name="removed_from_favorites">Removed From Favorites</string>

</resources>
