<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/poster_content_description"
            android:cropToPadding="true"
            android:src="@drawable/posterimageplaceholder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_place_holder"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/release_date_label"
            style="@style/detail_movie_label"
            android:text="@string/release_date_label"
            app:layout_constraintBottom_toTopOf="@id/release_date"
            app:layout_constraintLeft_toRightOf="@id/movie_poster"
            app:layout_constraintTop_toBottomOf="@id/movie_title" />


        <TextView
            android:id="@+id/release_date"
            style="@style/detail_movie_value"
            android:text="@string/release_date_place_holder"
            app:layout_constraintBottom_toTopOf="@id/rating_label"
            app:layout_constraintLeft_toRightOf="@id/movie_poster"
            app:layout_constraintTop_toBottomOf="@id/release_date_label" />

        <TextView
            android:id="@+id/rating_label"
            style="@style/detail_movie_label"
            android:text="@string/rating_label"
            android:textColor="@color/labelsColorText"
            app:layout_constraintLeft_toRightOf="@id/movie_poster"
            app:layout_constraintTop_toBottomOf="@id/release_date" />

        <TextView
            android:id="@+id/vote_average"
            style="@style/detail_movie_value"
            android:text="@string/vote_average_place_holder"
            app:layout_constraintLeft_toRightOf="@id/movie_poster"
            app:layout_constraintTop_toBottomOf="@id/rating_label" />

        <TextView
            android:id="@+id/synopsis_label"
            style="@style/detail_movie_label"
            android:text="@string/synopsis_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_poster" />


        <TextView
            android:id="@+id/plot_synopsis"
            style="@style/detail_movie_value"
            android:text="@string/plot_synopsis_place_holder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/synopsis_label" />


    </android.support.constraint.ConstraintLayout>

</layout>